Updated the live page

--- a/about.html
+++ b/about.html
@@ -7,22 +7,29 @@
     <link rel="stylesheet" href="about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>About page</title>
   </head>
   <body>
     <header>
       <div class="mobile no-pop" id="mobile-header">
-        <a id='mobile-menu' href="#">
-          <img id="hamburger-menu" src="./assets/mobile_menu.png" alt="hamburger-menu icon" />
+        <a id="mobile-menu" href="#">
+          <img
+            id="hamburger-menu"
+            src="assets/mobile_menu.png"
+            alt="hamburger-menu icon"
+          />
         </a>
       </div>
       <div class="desktop" id="top-bar">
         <a href="#">
-          <img src="./assets/facebook.png" alt="facebook">
+          <img src="assets/facebook.png" alt="facebook" />
         </a>
         <a href="#">
-          <img src="./assets/twitter.png" alt="twitter">
+          <img src="assets/twitter.png" alt="twitter" />
         </a>
         <a href="#">English</a>
         <a href="#">My page</a>
@@ -30,56 +37,66 @@
       </div>
       <nav class="desktop" id="nav">
         <div id="logo">
-          <a href="./index.html"><img src="./assets/NATO-Logo(4).png" alt="NATO logo"></a>
+          <a href="index.html"
+            ><img src="assets/NATO-Logo(4).png" alt="NATO logo"
+          /></a>
         </div>
         <div id="nav-links">
           <ul>
             <li>
-              <a id="nav-link-1" class="regular-link" href="./index.html">Home</a>
+              <a id="about" href="index.html">Home</a>
             </li>
             <li>
-              <a id="nav-link-2" class="regular-link" href="#">Program</a>
+              <a id="program" href="#">Program</a>
             </li>
             <li>
-              <a id="nav-link-3" class="regular-link" href="#">Join</a>
+              <a id="join" href="#">Join</a>
             </li>
             <li>
-              <a id="nav-link-4" class="regular-link" href="#">Sponsor</a>
+              <a id="sponsor" href="#">Sponsor</a>
             </li>
             <li>
-              <a id="nav-link-5" class="regular-link" href="#">News</a>
+              <a id="news" href="#">News</a>
             </li>
             <li>
-              <a id="special-link" href="#">Campaign</a>
+              <a id="campaign" href="#">Campaign</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-    </header>
     <main>
-      <section id="about-event">
-        <div id="abt">
+      <section id="nato-session">
+        <div id="session">
           <div id="event-header">
             <h4 class="mobile">"Hello, NATO Members!"</h4>
-            <h1>NATO <br class="desktop"> Global Summit 2023</h1>
-            <hr class="desktop">
+            <h1>
+              NATO <br class="desktop" />
+              Global Summit 2023
+            </h1>
+            <hr class="desktop" />
           </div>
-          <div id="event-description">
+          <div id="session-description">
             <p>
-              The 2023 Warsaw Summit of the North Atlantic Treaty Organization (NATO) will convene on 8-9 July, bringing
-              together <br>Member States' heads of state and heads of government in order to facilitate dialogue and establish
-              new policies and strategies for the Alliance. The main issues on the agenda will include balancing the Alliance's
-              policies towards the East and the South; <br>EU-NATO relations; and ensuring that Allies are fulfilling their defence
-              budget commitments. In the face of emerging and <br>complex security threats in the European security
-              environment, the challenge for NATO is to maintain and project a cohesive, united and effective vision for
-              transatlantic security.
+              The 2023 Warsaw Summit of the North Atlantic Treaty Organization
+              (NATO) will convene on 8-9 July, bringing together <br />Member
+              States' heads of state and heads of government in order to
+              facilitate dialogue and establish new policies and strategies for
+              the Alliance. The main issues on the agenda will include balancing
+              the Alliance's policies towards the East and the South;
+              <br />EU-NATO relations; and ensuring that Allies are fulfilling
+              their defense budget commitments. In the face of emerging and
+              <br />complex security threats in the European security
+              environment, the challenge for NATO is to maintain and project a
+              cohesive, united and effective vision for transatlantic security.
             </p>
           </div>
           <div id="contact-details">
             <p>
-              If you want any additional information about NATO Global Summit 2023 get in touch using email at <br><a
-                href="#">natoglobalsummit.org</a>
+              If you want any additional information about NATO Global Summit
+              2023 get in touch using email at <br /><a href="#"
+                >natoglobalsummit.org</a
+              >
             </p>
           </div>
         </div>
@@ -88,39 +105,48 @@
       <section class="body-section" id="about-logo">
         <div class="flex" id="lgo">
           <div class="section-title">
-            <h4>
-              NATO Logo
-            </h4>
-            <hr>
+            <h4>NATO Logo</h4>
+            <hr />
           </div>
           <div class="section-description">
-            <p class="centered">At present, NATO has 31 member countries. In 1949, there were 12 founding members of the Alliance: Belgium, Canada, Denmark, France, Iceland, Italy, Luxembourg, the Netherlands, Norway, Portugal, the United Kingdom and the United States. Since then, 19 more countries have joined the Alliance: Greece and Türkiye (1952); Germany (1955); Spain (1982); Czechia, Hungary and Poland (1999); Bulgaria, Estonia, Latvia, Lithuania, Romania, Slovakia and Slovenia (2004); Albania and Croatia (2009); Montenegro (2017); North Macedonia (2020); and Finland (2023).</p>
+            <p>
+              At present, NATO has 31 member countries. In 1949, there were 12
+              founding members of the Alliance: Belgium, Canada, Denmark,
+              France, Iceland, Italy, Luxembourg, the Netherlands, Norway,
+              Portugal, the United Kingdom and the United States. Since then, 19
+              more countries have joined the Alliance: Greece and Türkiye
+              (1952); Germany (1955); Spain (1982); Czechia, Hungary and Poland
+              (1999); Bulgaria, Estonia, Latvia, Lithuania, Romania, Slovakia
+              and Slovenia (2004); Albania and Croatia (2009); Montenegro
+              (2017); North Macedonia (2020); and Finland (2023).
+            </p>
           </div>
           <div class="logo-display">
-            <img src="assets/NATO-Logo.png" alt="NATO-logo">
+            <img src="assets/NATO-Logo.png" alt="NATO-logo" />
           </div>
         </div>
       </section>
 
       <section class="body-section" id="past-events">
         <div class="section-title">
-          <h4>
-            See Past NATO Global Summits
-          </h4>
-          <hr>
+          <h4>See Past NATO Global Summits</h4>
+          <hr />
         </div>
         <div class="section-description">
-          <p class="centered">Take a look at the past two NATO Global Summits that took place in IceLand and Finland</p>
+          <p>
+            Take a look at the past two NATO Global Summits that took place in
+            IceLand and Finland
+          </p>
         </div>
-        <div id="event-cards">
-          <div  id="tanzania">
-            <div class="tint">
+        <div id="summit-cards">
+          <div id="finland">
+            <div class="gallery">
               <h2>2017</h2>
               <p>NATO Global Summit in Helsinki, Finland</p>
             </div>
           </div>
           <div id="iceland">
-            <div class="tint" >
+            <div class="gallery">
               <h2>2023</h2>
               <p>NATO Global Summit in Reykjavic, Iceland</p>
             </div>
@@ -131,27 +157,28 @@
       <section class="mobile" id="partners">
         <div class="section-title">
           <h4>Partner</h4>
-          <hr>
+          <hr />
         </div>
-        <div id="mobile-partner-logos">
-          <img src="assets/spotify.png" alt="spotify" />
-          <img src="assets/google.png" alt="google" />
-          <img src="assets/mozilla.png" alt="mozilla" />
-          <img src="assets/adobe.png" alt="adobe" />
-          <img src="assets/ibm.png" alt="ibm" />
+        <div id="sponsor-logos">
+          <img src="assets/spotify.png" alt="spotify-logo" />
+          <img src="assets/google.png" alt="google-logo" />
+          <img src="assets/mozilla.png" alt="mozilla-logo" />
+          <img src="assets/adobe.png" alt="Adobe-logo" />
+          <img src="assets/ibm.png" alt="Ibm-logo" />
         </div>
       </section>
 
-      <section class="footer dark">
+      <footer>
         <div id="logo">
-          <img class="mobile" src="assets/NATO-Logo(1).png" alt="NATO logo">
-          <img class="desktop" src="assets/NATO-Logo(1).png" alt="NATO logo">
-        </div>
+          <img class="mobile" src="assets/NATO-Logo(1).png" alt="NATO logo" />
+          <img class="desktop" src="assets/NATO-Logo(1).png" alt="NATO logo" />
         </div>
         <div class="copyright">
-          <hp>2023 North Atlantic Treaty Organization. Copy rights are reserved</hp>
+          <p>
+            2023 North Atlantic Treaty Organization. Copy rights are reserved
+          </p>
         </div>
-      </section>
+      </footer>
     </main>
     <script src="index.js"></script>
   </body>
