--- a/index.html
+++ b/index.html
@@ -44,44 +44,42 @@
         <div id="nav-links">
           <ul>
             <li>
-              <a id="nav-link-1" class="regular-link" href="about.html"
-                >About</a
-              >
+              <a id="about" href="about.html">About</a>
             </li>
             <li>
-              <a id="nav-link-2" class="regular-link" href="#">Program</a>
+              <a id="program" href="#">Program</a>
             </li>
             <li>
-              <a id="nav-link-3" class="regular-link" href="#">Join</a>
+              <a id="join" href="#">Join</a>
             </li>
             <li>
-              <a id="nav-link-4" class="regular-link" href="#">Sponsor</a>
+              <a id="sponsor" href="#">Sponsor</a>
             </li>
             <li>
-              <a id="nav-link-5" class="regular-link" href="#">News</a>
+              <a id="news" href="#">News</a>
             </li>
             <li>
-              <a id="special-link" href="#">Campaign</a>
+              <a id="campaign" href="#">Campaign</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <main>
-      <section id="hero">
-        <div id="hero-content">
-          <div class="max-width" id="hero-header">
+      <section id="homepage">
+        <div id="homepage-content">
+          <div id="homepage-header">
             <h4>"Hello, NATO Countries!"</h4>
             <h1>North Atlantic Treaty Organization Global Summit 2023</h1>
           </div>
-          <div class="max-width" id="hero-description">
+          <div id="homepage-description">
             <p>
               A joyful celebration believing in the value of peace and security,
               creating a positive change with people from over 45 countries is
               taking place in May, in Warsaw,Poland.
             </p>
           </div>
-          <div class="max-width" id="hero-details">
+          <div id="homepage-details">
             <h2>2023.05.7 (MON) ~ 11 (FRI)</h2>
             <p>
               @National Museum of Poland, Military Center Valdivastock and more
@@ -104,7 +102,7 @@
             </div>
             <div class="program-description">
               <p>
-                Listen to the speakers from NATO sountries about the messages of
+                Listen to the speakers from NATO countries about the messages of
                 peace and security in the region.
               </p>
             </div>
@@ -119,7 +117,7 @@
             <div class="program-description">
               <p>
                 Appreciate various types of military hardware's artist's
-                licence, organised by the @National Museum of Poland.
+                license, organized by the @National Museum of Poland.
               </p>
             </div>
           </div>
@@ -147,7 +145,7 @@
             <div class="program-description">
               <p>
                 Collaborate on State of the Art Military technology projects
-                with our best defence Agency.
+                with our best defense Agency.
               </p>
             </div>
           </div>
@@ -166,7 +164,7 @@
             </div>
           </div>
         </div>
-        <button class="mobile" id="join-program">
+        <button type="button" class="mobile" id="join-program">
           Join NATO Global Summit 2023
         </button>
         <a href="#" class="desktop" id="program-link"
@@ -180,7 +178,7 @@
         </div>
         <div id="speakers"></div>
         <button type="button" class="mobile" id="speaker-btn" expanded="false">
-          Show More <img src="assets/arrow_down.png" alt="" />
+          More <img src="assets/arrow_down.png" alt="down-arrow" />
         </button>
       </section>
       <section class="desktop" id="partners">
@@ -189,11 +187,11 @@
           <hr />
         </div>
         <div id="partner-logos">
-          <img src="assets/spotify.png" alt="spotify" />
-          <img src="assets/google.png" alt="google" />
-          <img src="assets/mozilla.png" alt="mozilla" />
-          <img src="assets/adobe.png" alt="adobe" />
-          <img src="assets/ibm.png" alt="ibm" />
+          <img src="assets/spotify.png" alt="Spotify-logo" />
+          <img src="assets/google.png" alt="Google-logo" />
+          <img src="assets/mozilla.png" alt="Mozilla-logo" />
+          <img src="assets/adobe.png" alt="Adobe-logo" />
+          <img src="assets/ibm.png" alt="Ibm-logo" />
         </div>
       </section>
       <footer class="desktop" id="footer">
